--- a/Green_Day/Views/Shared/_LoginPartial.cshtml
+++ b/Green_Day/Views/Shared/_LoginPartial.cshtml
@@ -1,8 +1,8 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using Green_Day.Models
 
-@inject SignInManager<Users> SignInManager
-@inject UserManager<Users> UserManager
+@inject SignInManager<IdentityUser> SignInManager
+@inject UserManager<IdentityUser> UserManager
 
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
